--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -282,6 +282,7 @@ PB_Culture_Australien_tt:0 "Australien"
 PB_Culture_Aboriginal_tt:0 "Aboriginal"
 PB_Culture_New_Hollander_tt:0 "New Hollander"
 PB_Culture_Kiwi_tt:0 "Kiwi"
+PB_Culture_Australisch_tt:0 "Australisch"
 
 # ASIA #
 
@@ -556,6 +557,7 @@ PB_Culture_Australien_tt_delayed:0 ""
 PB_Culture_Aboriginal_tt_delayed:0 ""
 PB_Culture_New_Hollander_tt_delayed:0 ""
 PB_Culture_Kiwi_tt_delayed:0 ""
+PB_Culture_Australisch_tt_delayed:0 ""
 
 # ASIA #
 
