Get Your Dicks Down To New Dixie

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8529,6 +8529,29 @@ SAN_an_ADJ:0 "Indian"
  SRD_DEF:0 "Sardinia"
  SRD_ADJ:0 "Sardinian" 
 
+NDX_ni:0 "New Dixie"
+ NDX_ni_DEF:0 "New Dixie"
+ NDX_ds:0 "New Dixie"
+ NDX_ds_DEF:0 "New Dixie"
+ NDX_rc:0 "New Dixie"
+ NDX_rc_DEF:0 "New Dixie"
+ NDX_an:0 "New Dixie"
+ NDX_cn:0 "New Dixie"
+ NDX_cn_DEF:0 "New Dixie"
+ NDX_lb_DEF:0 "New Dixie"
+ NDX_ss:0 "New Dixie"
+ NDX_ss_DEF:0 "New Dixie"
+ NDX_jc:0 "New Dixie"
+ NDX_jc_DEF:0 "New Dixie"
+ NDX_ni_ADJ:0 "New Dixie"
+ NDX_rc_ADJ:0 "New Dixie"
+ NDX_lb_ADJ:0 "New Dixie"
+ NDX_ss_ADJ:0 "New Dixie"
+ NDX_jc_ADJ:0 "New Dixie"
+ NDX_ds_ADJ:0 "New Dixie"
+ NDX_cn_ADJ:0 "New Dixie"
+ NDX_an_ADJ:0 "New Dixie"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
