Cope and Seethe with the Comanche

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8529,15 +8529,17 @@ SAN_an_ADJ:0 "Indian"
  SRD_DEF:0 "Sardinia"
  SRD_ADJ:0 "Sardinian" 
 
-NDX_ni:0 "New Dixie"
+ NDX_ni:0 "New Dixie"
  NDX_ni_DEF:0 "New Dixie"
  NDX_ds:0 "New Dixie"
  NDX_ds_DEF:0 "New Dixie"
  NDX_rc:0 "New Dixie"
  NDX_rc_DEF:0 "New Dixie"
  NDX_an:0 "New Dixie"
+ NDX_an_DEF:0 "New Dixie"
  NDX_cn:0 "New Dixie"
  NDX_cn_DEF:0 "New Dixie"
+ NDX_lb:0 "New Dixie"
  NDX_lb_DEF:0 "New Dixie"
  NDX_ss:0 "New Dixie"
  NDX_ss_DEF:0 "New Dixie"
@@ -8551,6 +8553,31 @@ NDX_ni:0 "New Dixie"
  NDX_ds_ADJ:0 "New Dixie"
  NDX_cn_ADJ:0 "New Dixie"
  NDX_an_ADJ:0 "New Dixie"
+
+ CMC_ni:0 "Comancheria"
+ CMC_ni_DEF:0 "Comancheria"
+ CMC_ds:0 "Comancheria"
+ CMC_ds_DEF:0 "Comancheria"
+ CMC_rc:0 "Comancheria"
+ CMC_rc_DEF:0 "Comancheria"
+ CMC_an:0 "Comancheria"
+ CMC_an_DEF:0 "Comancheria"
+ CMC_cn:0 "Comancheria"
+ CMC_cn_DEF:0 "Comancheria"
+ CMC_lb:0 "Comancheria"
+ CMC_lb_DEF:0 "Comancheria"
+ CMC_ss:0 "Comancheria"
+ CMC_ss_DEF:0 "Comancheria"
+ CMC_jc:0 "Comancheria"
+ CMC_jc_DEF:0 "Comancheria"
+ CMC_ni_ADJ:0 "Comanche"
+ CMC_rc_ADJ:0 "Comanche"
+ CMC_lb_ADJ:0 "Comanche"
+ CMC_ss_ADJ:0 "Comanche"
+ CMC_jc_ADJ:0 "Comanche"
+ CMC_ds_ADJ:0 "Comanche"
+ CMC_cn_ADJ:0 "Comanche"
+ CMC_an_ADJ:0 "Comanche"
 
 ###################################
 # TEMPLATE
