AI stuff and new decision

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -835,11 +835,16 @@
 
   ENG_FIX_THE_SLUMP:0 "Has begun the process of fixing the economy"
 
+  ENG_Emergency_Defense_Measures_tt:0 "Any §RHostile Power§! has at least one infantry division on mainland §YBritain§!"
+
+  ENG_Emergency_Militia_tt:0 "§YEmergency Defense Militias§! will be mobolized"
+
   ##########################
   # DECISIONS
   ##########################
   PB_ENG_Domestic_and_Foreign_Policies:0 "Matters of the State"
   PB_ENG_Domestic_and_Foreign_Policies_desc:0 "\n\n\n\n\n\nAs The preeminent global power, Britain has numerous domestic and foreign policy responsibilities. Regardless of the political situation of the nation, these responsibilities must be handled. Britain has numerous concerns across the planet and on the continent, and with the tides of the world shifting towards war once again, we must do what we can to safeguard our interests."
+  PB_Emergency_Defense_Measures:0 "[ENG.GetFlag] Emergency Defense Measures"
   PB_Operation_Plantagenet:0 "[FRA.GetFlag] §YOperation Plantagenet§!"
   PB_Operation_Plantagenet_desc:0 "With France on the warpath once again, it is our duty to attempt to keep the peace in Europe. Left unattended for too long, France may subjugate the Germans and establish themselves as the preeminent continental power and become an existential threat to our interests. We must intervene to save not just ourselves, but the whole of Europe from the day of the jackboot."
   PB_Operation_Cromwell:0 "[ICA.GetFlag] §YOperation Cromwell§!"
