--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8579,6 +8579,44 @@ SAN_an_ADJ:0 "Indian"
  CMC_cn_ADJ:0 "Comanche"
  CMC_an_ADJ:0 "Comanche"
 
+ OSA:0 "Osage Nation"
+ OSA_DEF:0 "The Osage Nation"
+ OSA_ADJ:0 "Osage"
+ OSA_jc:0 "Osage Republic"
+ OSA_jc_DEF:0 "The Osage Republic"
+
+ MRN:0 "Marooner Republic"
+ MRN_DEF:0 "The Marooner Republic"
+ MRN_ADJ:0 "Marooner"
+
+ IRO:0 "Kelly"
+ IRO_DEF:0 "The Kelly Gang Territory"
+ IRO_ADJ:0 "Kelly"
+
+ NRT:0 "Norton Empire"
+ NRT_DEF:0 "The Glorious Norton Empire"
+ NRT_ADJ:0 "Imperial"
+
+ GRN:0 "Grangerland"
+ GRN_DEF:0 "The Republic of Grangerland"
+ GRN_ADJ:0 "Granger" 
+
+ SHO:0 "Pi'a-pa Confederation"
+ SHO_DEF:0 "The Pi'a-pa Confederation"
+ SHO_ADJ:0 "Pi'a-pa" 
+
+ NEV:0 "Nevada"
+ NEV_DEF:0 "The Republic of Nevada"
+ NEV_ADJ:0 "Nevadan"
+ 
+ APA:0 "Apacheria"
+ APA_DEF:0 "The Apache Confederation"
+ APA_ADJ:0 "Apacherian"
+
+ MEI:0 "Měizhōu"
+ MEI_DEF:0 "The United Chinese Communities of Měizhōu"
+ MEI_ADJ:0 "Chinese" 
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
