its almost done

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8617,6 +8617,14 @@ SAN_an_ADJ:0 "Indian"
  MEI_DEF:0 "The United Chinese Communities of Měizhōu"
  MEI_ADJ:0 "Chinese" 
 
+ TAB:0 "Tabernacle"
+ TAB_DEF:0 "The Tabernacle Territory"
+ TAB_ADJ:0 "Tabernacle"
+
+ NWA:0 "New Walden"
+ NWA_DEF:0 "The Naturalist State of New Walden"
+ NWA_ADJ:0 "Transcendentalist"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
