North American Cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -180,6 +180,20 @@ PB_Culture_Quebecois_tt:0 "Quebecois"
 PB_Culture_Seminole_tt:0 "Seminole"
 PB_Culture_Tejano_American_tt:0 "Texan"
 PB_Culture_Yucatec_tt:0 "Yucatec" 
+PB_Culture_Marooner_tt:0 "Marooner"
+PB_Culture_Comanche_tt:0 "Comanche"
+PB_Culture_Apache_tt:0 "Apache"
+PB_Culture_Osage_tt:0 "Osage"
+PB_Culture_Frontier_American_tt:0 "Trekker"
+PB_Culture_Shoshone_tt:0 "Newe"
+PB_Culture_Mormon_tt:0 "Mormon"
+PB_Culture_New_Dixie_tt:0 "New Dixie"
+PB_Culture_Sioux_tt:0 "Oceti Sakowin"
+PB_Culture_Blackfoot_tt:0 "Niitsitapi"
+PB_Culture_Sahaptin_tt:0 "Ni Mii Puu"
+PB_Culture_Crow_tt:0 "Apsáalooke"
+PB_Culture_Assiniboine_tt:0 "Assiniboine"
+PB_Culture_Cree_tt:0 "Cree" 
 
 # CARRIBEAN #
 
@@ -498,6 +512,20 @@ PB_Culture_Quebecois_tt_delayed:0 ""
 PB_Culture_Seminole_tt_delayed:0 "The story of the Seminole is one present among a few tribes on the Americas, making it rather powerful in the grand history of the continent. When the Europeans came, the Seminole people were decimated by European sickness, yet persevered and build up a strong community of people thriving on Floridian farmlands. When the Anglo settlers came, the Seminole, backed by African slaves who had made Florida their home, turned the tide and made peace with the Commonwealth, turning Florida into the only native-majority state of the entire Commonwealth. \n\nDespite the political odds stacked against the Seminole people, its culture remains intact. Important events like the Green Corn Dance are celebrated state-wide, while tobacco has been granted a special religious status, exempting it from federal law and taxes. Through hardship and Goliath-like odds, the Seminole have been able to survive."
 PB_Culture_Tejano_American_tt_delayed:0 "Texan or Tejano American describes the community of English speaking settlers in the Republic of Tejas, sons and daughters of previous American pioneers who now dominate the plains of Eastern Tejas. Rooted deeply in their freedom-loving and god-fearing culture, the Texans have been a vocal minority in the Tejas Republic, often heavily clashing with the big Hispanic landowners of the West. \n\nWith a culture heavily rooted in the old pioneers and a fascination with the tales of American heroes braving the uncivilized regions of this continent, the Texans are as \"folk\" as you can get in Tejas. Through their unique gun culture, prosperous ranches and semi-isolation from San Antonio, the Texans have been able to preserve their autonomy for quite some time at this point. Through their autonomy, these white protestants have basically formed a nation within our nation, one characterized by a \"free-and-fighting\" spirit and a rooted hatred for anything Mexican or catholic."
 PB_Culture_Yucatec_tt_delayed:0 ""
+PB_Culture_Marooner_tt_delayed:0 ""
+PB_Culture_Comance_tt_delayed:0 ""
+PB_Culture_Apache_tt_delayed:0 ""
+PB_Culture_Osage_tt_delayed:0 ""
+PB_Culture_Frontier_American_tt_delayed:0 ""
+PB_Culture_Shoshone_tt_delayed:0 ""
+PB_Culture_Mormon_tt_delayed:0 ""
+PB_Culture_New_Dixie_tt_delayed:0 ""
+PB_Culture_Sioux_tt_delayed:0 ""
+PB_Culture_Blackfoot_tt_delayed:0 ""
+PB_Culture_Sahaptin_tt_delayed:0 ""
+PB_Culture_Crow_tt_delayed:0 ""
+PB_Culture_Assiniboine_tt_delayed:0 ""
+PB_Culture_Cree_tt_delayed:0 "" 
 
 # CARRIBEAN #
 
