loadscreens and stuff

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -354,10 +354,41 @@
   PB_ENG_Assess_Industrial_Sector:0 "The Future of Heavy Industry"
   PB_ENG_Overturn_Edison_Automation:0 "Overturn the EIEC's Decision"
   PB_ENG_Reinforce_Automation:0 "Automation is the Future"
+  PB_ENG_Reopen_Mines:0 "Force the Mines Open"
+  PB_ENG_Introduce_Filler_Jobs:0 "Introduce Filler Jobs"
+  PB_ENG_Discourage_Domestic:0 "Discourage Domestic Automation"
+  PB_ENG_Contract_Trading:0 "Contracts for Concessions"
+  PB_ENG_National_Automation:0 "Humans Need Not Apply"
 
   PB_ENG_Assess_High_Technology:0 "The High Technology Sector"
+  PB_ENG_Assess_Edison_Androids:0 "Assess Edison Automatons"
+  PB_ENG_Fund_Wetware:0 "Examine Wetware Computing"
+  PB_ENG_Turing_Thinker:0 "Turing and the Mechanical Turk"
+  PB_ENG_Android_Applications:0 "Establish the Ministry of Technology"
+  PB_ENG_Measured_Response:0 "Subsidize the Smaller Companies"
+  PB_ENG_Expand_Edison_Contracts:0 "Side with the Private Sector"
+  PB_ENG_A_Thinking_Economy:0 "A Thinking Economy"
+  PB_ENG_Beacon_of_Technology:0 "Find the Finest Minds"
 
   PB_ENG_Assess_Society:0 "The Social Impact"
+  PB_ENG_Service_Economics:0 "Shift towards Service Economics"
+  PB_ENG_Ministry_of_Work:0 "Establish the Workplace Assignment Ministry"
+  PB_ENG_Household_Automation:0 "Automation in the Household"
+  PB_ENG_Maximum_Employment:0 "Women's Filler Job Department"
+  PB_ENG_Bread_and_Circuses:0 "Bread and Circuses Program"
+  PB_ENG_Export_Unemployment:0 "A New Life Awaits You in the Colonies!"
+  PB_ENG_Edison_Work_Program:0 "Edison Electric, Friend of the Working Man"
+  PB_ENG_Establish_ITC:0 "Establish the Imperial Telescreen Company"
+  PB_ENG_Megacorp_Propaganda:0 "Corporate Telescreen Grants"
+  PB_ENG_Colonial_Automation:0 "Export Automatons to the Colonies"
+
+  PB_ENG_Autocrisis_Socialist1:0 "The Post-Scarcity Ideal"
+  PB_ENG_Autocrisis_Socialist2:0 "A Future in Techno-Socialism"
+  PB_ENG_Autocrisis_Conservative1:0 "Synthesis of Progress and Tradition"
+  PB_ENG_Autocrisis_Conservative2:0 "Blurring the Lines of Corporation and State"
+  PB_ENG_Autocrisis_FarRight1:0 "Automation in Service of the Nation"
+  PB_ENG_Autocrisis_FarRight2:0 "A Perpetual Propaganda Apparatus"
+  PB_ENG_Autocrisis_FarRight3:0 "Unemployment as a Weapon of State"
 
   PB_ENG_1934_Imperial_Conference:0 "The 1934 Imperial Congress"
   PB_ENG_1934_Imperial_Conference_desc:0 "The 1934 Imperial Congress is the upcoming decision making for the Empire, already many advocates are calling for reform to the Imperial system. Many of the old guard have voices their opinions of direct rule from London, however citizens from the Commonwealth have called for Britain to lay down her mantle and allow the Commonwealth of nations take charge."
