--- a/localisation/english/PB_autonomy_l_english.yml
+++ b/localisation/english/PB_autonomy_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  autonomy_constituent_commonwealth:0 "Constituent Commonwealth"
  autonomy_constituent_dominion:0 "Constituent Dominion"
+ autonomy_constituent_free_state:0 "Free State"
  autonomy_client_state:0 "Client State"
 
  autonomy_PB_integrated_puppet:0 "Integrated State"
@@ -29,6 +30,8 @@
  autonomy_PB_European_Mandate:0 "European Mandate"
 
  autonomy_PB_Imperial_Associate:0 "Imperial Associate"
+
+ autonomy_banana_republic:0 "Banana Republic"
 
  PB_can_raise_autonomy_level:0 "Can Raise Autonomy Level"
  PB_can_lose_autonomy_level:0 "Can Lower Autonomy Level"
