--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -125,20 +125,20 @@
  JAP_cn_ADJ:0 "Japanese"
  JAP_an_ADJ:0 "Japanese"
 
- AME_ni:0 "United Commonwealth"
- AME_ni_DEF:0 "The United Commonwealth"
- AME_ds:0 "United Commonwealth"
- AME_ds_DEF:0 "The United Commonwealth"
- AME_rc:0 "United Commonwealth"
- AME_rc_DEF:0 "The United Commonwealth"
- AME_an:0 "United Commonwealth"
- AME_an_DEF:0 "The United Commonwealth"
- AME_cn:0 "United Commonwealth"
- AME_cn_DEF:0 "The United Commonwealth"
- AME_lb:0 "United Commonwealth"
- AME_lb_DEF:0 "The United Commonwealth"
- AME_ss:0 "United Commonwealth"
- AME_ss_DEF:0 "The United Commonwealth"
+ AME_ni:0 "United Commonwealth of America"
+ AME_ni_DEF:0 "The United Commonwealth of America"
+ AME_ds:0 "United Commonwealth of America"
+ AME_ds_DEF:0 "The United Commonwealth of America"
+ AME_rc:0 "United Commonwealth of America"
+ AME_rc_DEF:0 "The United Commonwealth of America"
+ AME_an:0 "United Commonwealth of America"
+ AME_an_DEF:0 "The United Commonwealth of America"
+ AME_cn:0 "United Commonwealth of America"
+ AME_cn_DEF:0 "The United Commonwealth of America"
+ AME_lb:0 "United Commonwealth of America"
+ AME_lb_DEF:0 "The United Commonwealth of America"
+ AME_ss:0 "United Commonwealth of America"
+ AME_ss_DEF:0 "The United Commonwealth of America"
  AME_jc:0 "Republic of America"
  AME_jc_DEF:0 "The Republic of America"
  AME_ni_ADJ:0 "American"
@@ -2476,22 +2476,22 @@
  HAI_cn_ADJ:0 "Afro-Creole"
  HAI_an_ADJ:0 "Afro-Creole"
 
- IRE_ni:0 "Irish Commonwealth"
- IRE_ni_DEF:0 "The Irish Commonwealth"
- IRE_ds:0 "Irish Commonwealth"
- IRE_ds_DEF:0 "The Irish Commonwealth"
- IRE_rc:0 "Irish Commonwealth"
- IRE_rc_DEF:0 "The Irish Commonwealth"
- IRE_an:0 "Irish Commonwealth"
- IRE_an_DEF:0 "The Irish Commonwealth"
- IRE_cn:0 "Irish Commonwealth"
- IRE_cn_DEF:0 "The Irish Commonwealth"
- IRE_lb:0 "Irish Commonwealth"
- IRE_lb_DEF:0 "The Irish Commonwealth"
- IRE_ss:0 "Irish Commonwealth"
- IRE_ss_DEF:0 "The Irish Commonwealth"
- IRE_jc:0 "Irish Commonwealth"
- IRE_jc_DEF:0 "The Irish Commonwealth"
+ IRE_ni:0 "Irish Autonomous Provinces"
+ IRE_ni_DEF:0 "The Irish Autonomous Provinces"
+ IRE_ds:0 "Irish Autonomous Provinces"
+ IRE_ds_DEF:0 "The Irish Autonomous Provinces"
+ IRE_rc:0 "Irish Autonomous Provinces"
+ IRE_rc_DEF:0 "The Irish Autonomous Provinces"
+ IRE_an:0 "Irish Autonomous Provinces"
+ IRE_an_DEF:0 "The Irish Autonomous Provinces"
+ IRE_cn:0 "Irish Autonomous Provinces"
+ IRE_cn_DEF:0 "The Irish Autonomous Provinces"
+ IRE_lb:0 "Irish Autonomous Provinces"
+ IRE_lb_DEF:0 "The Irish Autonomous Provinces"
+ IRE_ss:0 "Irish Autonomous Provinces"
+ IRE_ss_DEF:0 "The Irish Autonomous Provinces"
+ IRE_jc:0 "Irish Autonomous Provinces"
+ IRE_jc_DEF:0 "The Irish Autonomous Provinces"
  IRE_ni_ADJ:0 "Irish"
  IRE_rc_ADJ:0 "Irish"
  IRE_lb_ADJ:0 "Irish"
