New Dixie and AC VP stuff

--- a/localisation/english/PB_Cities_l_english.yml
+++ b/localisation/english/PB_Cities_l_english.yml
@@ -13,3 +13,26 @@ VICTORY_POINTS_520:0 "Willem Fort"
 ############
 
 VICTORY_POINTS_9833:0 "Constantinople"
+
+
+############
+# American Commonwealth 
+############
+
+VICTORY_POINTS_11782:0 "Edsion"
+VICTORY_POINTS_9801:0 "Albertia"
+VICTORY_POINTS_6929:0 "Frederick"
+VICTORY_POINTS_9847:0 "Norwalk"
+VICTORY_POINTS_6909:0 "New Haven"
+VICTORY_POINTS_9758:0 "Wilmington"
+VICTORY_POINTS_11900:0 "Camden"
+VICTORY_POINTS_3906:0 "New Bedford"
+VICTORY_POINTS_6911:0 "Yonkers"
+VICTORY_POINTS_3710:0 "Worcester"
+
+############
+# New Dixie
+############
+VICTORY_POINTS_4540:0 "Fort Jefferson"
+VICTORY_POINTS_4757:0 "Bowieville"
+VICTORY_POINTS_4444:0 "Forest City"
