--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -475,13 +475,13 @@
  VICTORY_POINTS_1690:0 "Spokane"
  VICTORY_POINTS_1747:0 "Mni Luzahang"
  VICTORY_POINTS_1770:0 "Des Moines"
- VICTORY_POINTS_1806:0 "Toulasie"
+ VICTORY_POINTS_1806:0 "New Charleston"
  VICTORY_POINTS_1827:0 "Denver"
  VICTORY_POINTS_1836:0 "Bismarck"
  VICTORY_POINTS_1843:0 "Miami"
  VICTORY_POINTS_1866:0 "Minneapolis"
  VICTORY_POINTS_3960:0 "Istres"
- VICTORY_POINTS_4569:0 "Saint-Louis"
+ VICTORY_POINTS_4569:0 "St.Louis"
  VICTORY_POINTS_4860:0 "Tonkaliwako"
  VICTORY_POINTS_6696:0 "Victoria"
  VICTORY_POINTS_6710:0 "Detroit"
@@ -496,8 +496,8 @@
  VICTORY_POINTS_7552:0 "Nouvelle Orléans"
  VICTORY_POINTS_9671:0 "San Francisco"
  VICTORY_POINTS_9713:0 "Sacramento"
- VICTORY_POINTS_10370:0 "Étampes"
- VICTORY_POINTS_10717:0 "Cansez"
+ VICTORY_POINTS_10370:0 "Calhoun, D.D"
+ VICTORY_POINTS_10717:0 "Jackson"
  VICTORY_POINTS_11654:0 "Buffalo"
  VICTORY_POINTS_11800:0 "Pittsburgh"
  VICTORY_POINTS_12357:0 "Milwaukee"
@@ -669,7 +669,7 @@
  VICTORY_POINTS_8252:0 "Guayaquil"
  VICTORY_POINTS_9108:0 "Luleå"
  VICTORY_POINTS_9458:0 "Portsmouth"
- VICTORY_POINTS_9832:0 "Providence"
+ VICTORY_POINTS_11830:0 "Providence"
  VICTORY_POINTS_9907:0 "Florence"
  VICTORY_POINTS_9945:1 "Ceuta"
  VICTORY_POINTS_9974:0 "Ningbo"
