Small America fixes

--- a/localisation/english/PB_Cities_l_english.yml
+++ b/localisation/english/PB_Cities_l_english.yml
@@ -36,3 +36,9 @@ VICTORY_POINTS_3710:0 "Worcester"
 VICTORY_POINTS_4540:0 "Fort Jefferson"
 VICTORY_POINTS_4757:0 "Bowieville"
 VICTORY_POINTS_4444:0 "Forest City"
+
+
+############
+# HBC
+############
+VICTORY_POINTS_10271:0 "Vancouver"
