--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -513,7 +513,7 @@
  VICTORY_POINTS_13091:0 "Novo-Odessa"
  VICTORY_POINTS_3778:0 "Ottawa"
  VICTORY_POINTS_3775:0 "Toronto"
- VICTORY_POINTS_1408:0 "Vancouver"
+ VICTORY_POINTS_1408:0 "Gastown"
  VICTORY_POINTS_3010:0 "Edmonton"
  VICTORY_POINTS_4345:0 "Montréal"
  VICTORY_POINTS_4872:0 "Winnipeg"
