--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -194,6 +194,8 @@ PB_Culture_Sahaptin_tt:0 "Ni Mii Puu"
 PB_Culture_Crow_tt:0 "Apsáalooke"
 PB_Culture_Assiniboine_tt:0 "Assiniboine"
 PB_Culture_Cree_tt:0 "Cree" 
+PB_Culture_Borealian_tt:0 "Borealian" 
+PB_Culture_Alaskan_tt:0 "Alaskan" 
 
 # CARRIBEAN #
 
@@ -539,6 +541,8 @@ PB_Culture_Sahaptin_tt_delayed:0 ""
 PB_Culture_Crow_tt_delayed:0 ""
 PB_Culture_Assiniboine_tt_delayed:0 ""
 PB_Culture_Cree_tt_delayed:0 "" 
+PB_Culture_Borealian_tt_delayed:0 "" 
+PB_Culture_Alaskan_tt_delayed:0 "" 
 
 # CARRIBEAN #
 
