--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -325,8 +325,21 @@
 
  ARTILLERT_TITLE_NA:0 "NUCLEAR ARTILLERY"
  nuclear_artillery_upgrade_1:0 "Micro-Nuke Launchers"
- nuclear_artillery_upgrade_1_desc:0 "Military and nuclear theorists believe that with a more compact unstable isotope artillery guns would theoratically be able to launch these so called "\Micro-Nukes\" from a safe distance whilst still delivering a deadly payload. If we were to fully harness the atom then god knows what these Micro-Nukes will be capable of."
+ nuclear_artillery_upgrade_1_desc:0 "Military and nuclear theorists believe that with a more compact unstable isotope artillery guns would theoratically be able to launch these so called "Micro-Nukes" from a safe distance whilst still delivering a deadly payload. If we were to fully harness the atom then god knows what these Micro-Nukes will be capable of."
  nuclear_artillery_upgrade_2:0 "Dedicated Scouting Tactics"
  nuclear_artillery_upgrade_2_desc:0 "By having a team of reconnaissance experts dedicated purely to finding acceptable shelling areas for our Micro-Nuke launchers we could expect greater planning and deployment speeds of this devestating weapons."
  nuclear_artillery_upgrade_3:0 "M.A.D Launchers"
  nuclear_artillery_upgrade_3_desc:0 "Does God have mercy on those that use weapons confined only to the Heavens? Doesn't matter though, we are already going to hell for dreaming up such destructive technologies, might as well use them."
+
+ basic_encryption_with_lar:1 "Encryption - Polyalphabetical Ciphers"
+ basic_encryption_with_lar_desc:0 "With new methods of communication comes new risks for interception. Rotor cipher machines can be used to allow for rapid, complex encryption."
+ improved_encryption_with_lar:1 "Encryption - Cyclic Permutations"
+ improved_encryption_with_lar_desc:0 "Limitation in the randomization of cipher machines can be exploited to break the ciphers. By improving the randomness of the rotor mechanics, we can make this kind of cryptanalysis more difficult."
+ advanced_encryption_with_lar:1 "Encryption - Pulse-code Modulation"
+ advanced_encryption_with_lar_desc:0 "Technological improvements and hard-earned experience allows us to implement more traffic flow security measures in our communication."
+ basic_decryption_with_lar:1 "Decryption - Frequency Analysis"
+ basic_decryption_with_lar_desc:0 "Cryptanalysis is increasingly becoming an advanced mathematical science. Systems like card catalogs and devices like cyclometers can aid the necessary work."
+ improved_decryption_with_lar:1 "Decryption - Side-channel Attack"
+ improved_decryption_with_lar_desc:0 "The development of more sophisticated computers allows for new applications of cryptanalysis methods like differencing, which can be used to break advanced cyphers when combined with new hand codebreaking methods."
+ advanced_decryption_with_lar:1 "Decryption - Automated Deduction"
+ advanced_decryption_desc_with_lar:0 "The increased computation power that improved our cryptanalysis so far threatens to create nearly unbreakable ciphers in the future. To stay ahead, we must be prepared to work more aggressively on gaining inside information on the technology."
