--- a/localisation/english/PB_Generic_Focus_l_english.yml
+++ b/localisation/english/PB_Generic_Focus_l_english.yml
@@ -1,5 +1,184 @@
 ﻿l_english:
 
+#############################
+#          FOCUS            #
+#############################
+
+PB_generic_industry_start:0 "PLACEHOLDER1"
+PB_generic_industry_start_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_newbuildings1:0 "PLACEHOLDER2"
+PB_generic_industry_newbuildings1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_newbuildings2:0 "PLACEHOLDER3"
+PB_generic_industry_newbuildings2_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_infrastructure1:0 "PLACEHOLDER4"
+PB_generic_industry_infrastructure1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_infrastructure2:0 "PLACEHOLDER5"
+PB_generic_industry_infrastructure2_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_infrastructure2:0 "PLACEHOLDER6"
+PB_generic_industry_infrastructure2_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_infrastructure3:0 "PLACEHOLDER7"
+PB_generic_industry_infrastructure3_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_researchprograms:0 "PLACEHOLDER8"
+PB_generic_industry_researchprograms_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_offmap_civs1:0 "PLACEHOLDER9"
+PB_generic_industry_offmap_civs1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_civs1:0 "PLACEHOLDER10"
+PB_generic_industry_civs1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_civs2:0 "PLACEHOLDER11"
+PB_generic_industry_civs2_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_offmap_mils1:0 "PLACEHOLDER12"
+PB_generic_industry_offmap_mils1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_mils1:0 "PLACEHOLDER13"
+PB_generic_industry_mils1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_mils2:0 "PLACEHOLDER14"
+PB_generic_industry_mils2_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_milcivfactories:0 "PLACEHOLDER15"
+PB_generic_industry_milcivfactories_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_dockyards1:0 "PLACEHOLDER16"
+PB_generic_industry_dockyards1_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_dockyards2:0 "PLACEHOLDER17"
+PB_generic_industry_dockyards2_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_dockyards3:0 "PLACEHOLDER18"
+PB_generic_industry_dockyards3_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_milindustryspirit:0 "PLACEHOLDER19"
+PB_generic_industry_milindustryspirit_desc:0 "PLACEHOLDER"
+
+PB_generic_industry_researchslot:0 "PLACEHOLDER20"
+PB_generic_industry_researchslot_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_start:0 "PLACEHOLDER21"
+PB_generic_navy_start_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_research1:0 "PLACEHOLDER22"
+PB_generic_navy_research1_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_smallnavy1:0 "PLACEHOLDER23"
+PB_generic_navy_smallnavy1_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_smallnavy2:0 "PLACEHOLDER24"
+PB_generic_navy_smallnavy2_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_smallnavy3:0 "PLACEHOLDER25"
+PB_generic_navy_smallnavy3_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_bignavy1:0 "PLACEHOLDER26"
+PB_generic_navy_bignavy1_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_bignavy2:0 "PLACEHOLDER27"
+PB_generic_navy_bignavy2_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_bignavy3:0 "PLACEHOLDER30"
+PB_generic_navy_bignavy3_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_airnavy1:0 "PLACEHOLDER28"
+PB_generic_navy_airnavy1_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_airnavy2:0 "PLACEHOLDER29"
+PB_generic_navy_airnavy2_desc:0 "PLACEHOLDER"
+
+PB_generic_navy_research2:0 "PLACEHOLDER22"
+PB_generic_navy_research2_desc:0 "PLACEHOLDER"
+
+PB_generic_air_start:0 "PLACEHOLDER32"
+PB_generic_navy_air_start_desc:0 "PLACEHOLDER"
+
+PB_generic_airbases:0 "PLACEHOLDER33"
+PB_generic_navy_airbases_desc:0 "PLACEHOLDER"
+
+PB_generic_fighter_airplanes1:0 "PLACEHOLDER34"
+PB_generic_fighter_airplanes1_desc:0 "PLACEHOLDER"
+
+PB_generic_CAS_airplanes1:0 "PLACEHOLDER35"
+PB_generic_CAS_airplanes1_desc:0 "PLACEHOLDER"
+
+PB_generic_fighter_airplanes2:0 "PLACEHOLDER36"
+PB_generic_fighter_airplanes2_desc:0 "PLACEHOLDER"
+
+PB_generic_bomber_airplanes1:0 "PLACEHOLDER37"
+PB_generic_bomber_airplanes1_desc:0 "PLACEHOLDER"
+
+PB_generic_blimps_airplanes1:0 "PLACEHOLDER38"
+PB_generic_blimps_airplanes1_desc:0 "PLACEHOLDER"
+
+PB_generic_bombers_airplanes2:0 "PLACEHOLDER39"
+PB_generic_bombers_airplanes2_desc:0 "PLACEHOLDER"
+
+PB_generic_nukes_researchbonus:0 "PLACEHOLDER40"
+PB_generic_nukes_researchbonus_desc:0 "PLACEHOLDER"
+
+PB_generic_army_start:0 "PLACEHOLDER41"
+PB_generic_army_start_desc:0 "PLACEHOLDER"
+
+PB_generic_army_guns1:0 "PLACEHOLDER42"
+PB_generic_army_guns1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_equipment1:0 "PLACEHOLDER42"
+PB_generic_army_equipment1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_drugbonus1:0 "PLACEHOLDER43"
+PB_generic_army_drugbonus1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_doctrine1:0 "PLACEHOLDER44"
+PB_generic_army_doctrine1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_doctrine2:0 "PLACEHOLDER45"
+PB_generic_army_doctrine2_desc:0 "PLACEHOLDER"
+
+PB_generic_army_natspirit:0 "PLACEHOLDER46"
+PB_generic_army_natspirit_desc:0 "PLACEHOLDER"
+
+PB_generic_army_weirdstuff1:0 "PLACEHOLDER47"
+PB_generic_army_weirdstuff1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_tanks1:0 "PLACEHOLDER48"
+PB_generic_army_tanks1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_tanks2:0 "PLACEHOLDER49"
+PB_generic_army_tanks2_desc:0 "PLACEHOLDER"
+
+PB_generic_army_hardsuits1:0 "PLACEHOLDER50"
+PB_generic_army_hardsuits1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_mechs1:0 "PLACEHOLDER51"
+PB_generic_army_mechs1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_mechtankspirit:0 "PLACEHOLDER52"
+PB_generic_army_mechtankspirit_desc:0 "PLACEHOLDER"
+
+PB_generic_army_razormaiden1:0 "PLACEHOLDER53"
+PB_generic_army_razormaiden1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_combatagate1:0 "PLACEHOLDER54"
+PB_generic_army_combatagate1_desc:0 "PLACEHOLDER"
+
+PB_generic_army_combatagate2:0 "PLACEHOLDER55"
+PB_generic_army_combatagate2_desc:0 "PLACEHOLDER"
+
+PB_generic_army_weirdstuff2:0 "PLACEHOLDER56"
+PB_generic_army_weirdstuff2_desc:0 "PLACEHOLDER"
+
+#############################
+#     IDK WHAT THIS IS      #
+#############################
+
   PB_Focus_Generic_Army_Effort:0 "Expand the Armed Forces"
   PB_Focus_Generic_Army_Doctrine:0 "Debates on Doctrine"
   PB_Focus_Generic_Mobile_Warfare:0 "Mass Motorization"
