--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -371,7 +371,7 @@
  STATE_370:0 "Mississippi"
  STATE_371:0 "Louisiane"
  STATE_372:0 "Arcansas"
- STATE_373:0 "Missouri"
+ STATE_373:0 "Jackson"
  STATE_374:0 "Oclehumme"
  STATE_375:1 "West Texas"
  STATE_376:0 "Kiowa"
@@ -939,3 +939,4 @@
  STATE_937:0 "Salamanca"
  STATE_938:0 "Guadalajara"
  STATE_939:0 "Cuzco"
+ STATE_948:0 "Stephens"
