--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -234,6 +234,7 @@ PB_Culture_Kaapkolonie_tt:0 "Kaapkolonial"
 PB_Culture_Xhosa_tt:0 "Xhosa"
 PB_Culture_Sesotho_tt:0 "Sesotho"
 PB_Culture_Zulu_tt:0 "Zulu"
+PB_Culture_Malagasy_tt:0 "Malagasy"
 
 # EAST AFRICAN #
 
@@ -578,6 +579,14 @@ PB_Culture_Egyptian_tt_delayed:0 ""
 # AFRICAN #
 
 PB_Culture_Afro_European_tt_delayed:0 ""
+
+# SOUTH AFRICAN #
+
+PB_Culture_Kaapkolonie_tt_delayed:0 ""
+PB_Culture_Xhosa_tt_delayed:0 ""
+PB_Culture_Sesotho_tt_delayed:0 ""
+PB_Culture_Zulu_tt_delayed:0 ""
+PB_Culture_Malagasy_tt_delayed:0 ""
 
 # WEST AFRICAN #
 
