--- a/localisation/english/PB_Super_Events_l_english.yml
+++ b/localisation/english/PB_Super_Events_l_english.yml
@@ -96,3 +96,11 @@
   SPEVNT_Automation_Crisis:0 "THE AUTOMATION CRISIS"
   SPEVNT_Automation_Crisis_TEXT:0 "In order to get what we've got, we have, in effect, traded these people out of what was the most important thing on earth to them - the feeling of being needed and useful, the foundation of self-respect.\n\n§O-Kurt Vonnegut, Player Piano-§!"
   SPEVNT_Automation_Crisis_CLOSETEXT:0 "§OHUMANS, REFUTED§!"
+
+  SPEVNT_Russia_Wins_Orbit_War:0 "RUSSIA WINS THE ORBIT WARS"
+  SPEVNT_Russia_Wins_Orbit_War_TEXT:0 "I am obliged to report that, at the present moment, the Russian Empire is run by lunatics.\n\n§O-Maurice Paleologue-§!"
+  SPEVNT_Russia_Wins_Orbit_War_CLOSETEXT:0 "§OTODAY, EARTH. TOMORROW, THE STARS.§!"
+
+  SPEVNT_Britain_Wins_Orbit_War:0 "BRITAIN WINS THE ORBIT WARS"
+  SPEVNT_Britain_Wins_Orbit_War_TEXT:0 "There is, though I do not know how there is or why there is, a sense of infinite peace and protection in the glittering hosts of heaven.\n\n§O-H. G. Wells-§!"
+  SPEVNT_Britain_Wins_Orbit_War_CLOSETEXT:0 "§OBRITANNIA CLAIMS THE HEAVENS§!"
