--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -298,6 +298,26 @@
   PB_GER_Status_Of_The_Empire_desc:0 "Our colonies in Africa and Asia were left to fend for themselves whilst we were tackling the Pacte threat, however now that the war is over we can finally assist our long abandoned colonies."
   PB_GER_European_Common_Market:0 "Europe\nOur Market"
   PB_GER_European_Common_Market_desc:0 "."
+  PB_GER_Europe_Protector:0 "Protector of Europe"
+  PB_GER_Europe_Protector_desc:0 "Protector of Europe"
+  PB_GER_Our_New_Way:0 "A New Way"
+  PB_GER_Our_New_Way_desc:0 "A New Way"
+  PB_GER_Speech_Europe:0 "Speech of Europe"
+  PB_GER_Speech_Europe_desc:0 "Speech of Europe"
+  PB_GER_Europe_Fond:0 "Europe Fond"
+  PB_GER_Europe_Fond_desc:0 "Europe Fond"
+  PB_GER_Europe_Autonomy:0 "Guarentee Autonomy"
+  PB_GER_Europe_Autonomy_desc:0 "Guarentee Autonomy"
+  PB_GER_The_Reich_Complete:0 "§RThe Reich§! Greatest Hour"
+  PB_GER_The_Reich_Complete_desc:0 "§RThe Reich§! Greatest Hour"
+  PB_GER_Fucking_the_French:0 "Revival of §BFrancia§!"
+  PB_GER_Fucking_the_French_desc:0 "Revival of §BFrancia§!"
+  PB_GER_Crush_on_French:0 "Creating an Unthinkable Bond"
+  PB_GER_Crush_on_French_desc:0 "Creating an Unthinkable Bond"
+  PB_GER_Helping_French:0 "Helping the French"
+  PB_GER_Helping_French_desc:0 "Helping the French"
+  PB_GER_Kissing_French:0 "Enemies, Never Again"
+  PB_GER_Kissing_French_desc:0 "Enemies, Never Again"
   PB_GER_Never_Forget:0 "Never Forget"
   PB_GER_Never_Forget_desc:0 "War comes at a cost. A cost of men, money, resources and much more. Though we now stand victoriously in France, and have installed our puppet. The question now is whether we want to forgive the French people for all they have caused. We believe we SHOULD forgive them, they caused the war, they killed our heroic soldiers. The French people should however not pay for the actions their government did. They should be forgivven, and be brought with us together into a new era of peace in which they can actively enroll in international politics and in international trade by our side. We shall forgive them!"
   PB_GER_Never_Forgive:0 "Never Forgive"
