India Culture Stuff (Almost Done)

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -331,6 +331,18 @@ PB_Culture_Uyghur_tt:0 "Uyghur"
 PB_Culture_Hui_tt:0 "Hui"
 PB_Culture_Han_tt:0 "Han"
 
+# INDIA #
+
+PB_Culture_Sinhalese_tt:0 "Sinhalese"
+PB_Culture_Tamil_tt:0 "Tamil"
+PB_Culture_Kannada_tt:0 "Kannada"
+PB_Culture_Telugu_tt:0 "Telugu"
+PB_Culture_Oriya_tt:0 "Oriya"
+PB_Culture_Bengalese_tt:0 "Bengalese"
+PB_Culture_Burmese_tt:0 "Burmese"
+PB_Culture_Marathi_tt:0 "Marathi"
+PB_Culture_Hindi_tt:0 "Hindi"
+
 
 ## -------- Expanded Lore -------- ##
 
@@ -642,3 +654,15 @@ PB_Culture_Cantonese_tt_delayed:0 ""
 PB_Culture_Uyghur_tt_delayed:0 ""
 PB_Culture_Hui_tt_delayed:0 ""
 PB_Culture_Han_tt_delayed:0 ""
+
+# INDIA #
+
+PB_Culture_Sinhalese_tt_delayed:0 ""
+PB_Culture_Tamil_tt_delayed:0 ""
+PB_Culture_Kannada_tt_delayed:0 ""
+PB_Culture_Telugu_tt_delayed:0 ""
+PB_Culture_Oriya_tt_delayed:0 ""
+PB_Culture_Bengalese_tt_delayed:0 ""
+PB_Culture_Burmese_tt_delayed:0 ""
+PB_Culture_Marathi_tt_delayed:0 ""
+PB_Culture_Hindi_tt_delayed:0 ""
