--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -259,6 +259,9 @@
   PB_GER_Rebuilding_Germany:0 "Rebuilding Germany"
   PB_GER_Colonial_Assistance_Funds:0 "Colonial Assistance Funds"
   PB_GER_Franco_German_Foreign_Legion:0 "Franco-German Foreign Legion"
+  
+  PB_GER_Europe_Fond_Cost:0 "The Europe Fond"
+  PB_GER_Europe_Political_Autonomy:0 "European Countries Council"
 
   ##########################
   # FOCUSES
@@ -1375,6 +1378,10 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   germany.184.a:0 "Such is the cost of friendship"
   germany.184.b:0 "These are German lands!"
 
+  germany.185.t:0 "The Speech for Europe"
+  germany.185.d:0 "The Speech for Europe"
+  germany.185.a:0 "A New Area in History has begun"
+
   ##########################
   # GERMANY EXILE EVENTS
   ##########################
@@ -1695,6 +1702,12 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   PB_GER_Sudwest_Intervention_Success:0 "§YThe Intervention in South Africa was§! §GSuccessful§!\n"
   PB_GER_Sudwest_Intervention_Failure:0 "§YThe Intervention in South Africa was a§! §RFailure§!\n"
+
+  GER_Post_War_Diplomacy_SS:0 "§BThe establishment of an United European Order shall be our Goal!§!"
+  GER_Post_War_Diplomacy_LB:0 "§YFor Final Peace between Germany and France we must pursue our future together!§!"
+  GER_Post_War_Diplomacy_RC:0 "§RGermany has to be the ruling hegemony over all of Mainland Europe!§!"
+
+  
 
   ##########################
   # TOOLTIPS
