Culture state work done

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -342,6 +342,16 @@ PB_Culture_Bengalese_tt:0 "Bengalese"
 PB_Culture_Burmese_tt:0 "Burmese"
 PB_Culture_Marathi_tt:0 "Marathi"
 PB_Culture_Hindi_tt:0 "Hindi"
+PB_Culture_Dhivehin_tt:0 "Dhivehin"
+PB_Culture_Kashmiri_tt:0 "Kashmiri"
+PB_Culture_Punjab_tt:0 "Punjab"
+PB_Culture_Marwari_tt:0 "Marwari"
+PB_Culture_Gujarati_tt:0 "Gujarati"
+PB_Culture_Sindhi_tt:0 "Sindhi"
+PB_Culture_Tibeto_Burman_tt:0 "Tibeto-Burman"
+PB_Culture_Pashtun_tt:0 "Pashtun"
+PB_Culture_Balochi_tt:0 "Balochi"
+PB_Culture_Afghan_tt:0 "Afghan"
 
 
 ## -------- Expanded Lore -------- ##
@@ -636,14 +646,15 @@ PB_Culture_Formosan_tt_delayed:0 ""
 PB_Culture_Filipino_tt_delayed:0 ""
 PB_Culture_Thai_tt_delayed:0 ""
 PB_Culture_Vietnamese_tt_delayed:0 ""
-PB_Culture_Cambodian_tt_delayed:0 ""
+PB_Culture_Cambodian_tt_delayed:0 "Being of Buddhist and Hindu nature the people have been unified in their religion from the very beginning. Ever since the days of the Khmer Empire the country has been a regional power with a strong monarch and national identity, separating themselves from the neighbouring Vietnamese, Siamese and Laos people in most cultural ways. The people often celebrate Buddhist, Hindu and cultural holidays, though even in this they stand different from their relatives in the region. 
+They are said to be less strict in religious policy, and more liberal thinking on the political spectrum, certainly setting themselves apart from the high restrictiveness of the Siamese. Death is not viewed with the great outpouring of grief common to Western society; it is viewed as the end of one life and as the beginning of another life that one hopes will be better. Buddhist Khmer usually are cremated, and their ashes are deposited in a stupa in the temple compound. Khmer culture is very hierarchical. The greater a person's age, the greater the level of respect that must be granted to them. Cambodians are addressed with a hierarchical title corresponding to their seniority before the name. When a married couple becomes too old to support themselves, they may invite the youngest child's family to move in and to take over running the household. At this stage in their lives, they enjoy a position of high status."
 PB_Culture_Lao_tt_delayed:0 ""
 PB_Culture_Malay_tt_delayed:0 ""
 PB_Culture_Indonesian_tt_delayed:0 ""
 PB_Culture_Papuan_tt_delayed:0 ""
-PB_Culture_Hawaiian_tt_delayed:0 ""
+PB_Culture_Hawaiian_tt_delayed:0 "Despite its small size, and extensive loss of population due to disease in the 1700s, Hawaii is a nation rich in culture. Indeed, some may argue that this brush with extinction has encouraged the Hawaiian population to preserve their culture as much as they can. Originating from the first Polynesian explorers who settled on Hawaii, many parts of the nation's culture are centred around water and the sea. One of their most famous cultural past times being the usage of 'Outrigger Canoes', despite the invention of far more effective modes of transport throughout the 19th and early 20th centuries, this type of canoe remains prominent across the islands. Even within their deities water can be found, of their four major deities two of them are connected to water. Kanaloa is the God of the ocean and Lono is the God of rain as well as fertility and peace. While Kāne is the God of Creation and Ku is the god of war and male pursuits. In this age of Imperialism, Hawaii's culture exists as one that has managed to form independent of European colonialism until its much more recent history.  And with his status as a British Protectorate secure, the Hawaiian people will do their best to keep their culture not just alive but thriving."
 PB_Culture_Micronesian_tt_delayed:0 ""
-PB_Culture_Euro_Asiatic_tt_delayed:0 ""
+PB_Culture_Euro_Asiatic_tt_delayed:0 "An umbrella term for several subcultures, Euro-Asiatic cultures are a relatively new phenomenon. Though contact between Europe and Asia goes as far back as the Roman Empire and Han China, cultural mixing only truly took off during the years of European colonisation of Asia in the 18th and 19th centuries. During these years, many European powers established more permeant colonies. Many of these new colonists would end up mingling with local populations and even marrying into some of the more wealthy native families. As the centuries went on, this mixing of cultures formed an entirely new cultural identity. The exact nature of this culture varies greatly depending on where they are, and who lives there but the most common involve the mixing of British culture with Malaysia or German with Filipino. They are a common sight in Imperial colonies, but enclaves do exists within Eastern nations. The only truly unifying feature of this culture is the blend between identities, taking on aspects of both groups and identifying with each equally. However, this form of multiculturalism, though celebrated by some as a break down of the barrier between coloniser and colonised, is not universally approved. Many in the Imperial home territories, see it as a bastardisation of their culture. While Nationalist circles within Asia believe it is an effort to force them to Assimilate into European society. Despite these threats, Euro-Asiatic groups continue to thrive within the cultural boiling pots of Asia."
 
 # CHINA #
 
@@ -666,3 +677,13 @@ PB_Culture_Bengalese_tt_delayed:0 ""
 PB_Culture_Burmese_tt_delayed:0 ""
 PB_Culture_Marathi_tt_delayed:0 ""
 PB_Culture_Hindi_tt_delayed:0 ""
+PB_Culture_Dhivehin_tt_delayed:0 ""
+PB_Culture_Kashmiri_tt_delayed:0 ""
+PB_Culture_Punjab_tt_delayed:0 ""
+PB_Culture_Marwari_tt_delayed:0 ""
+PB_Culture_Gujarati_tt_delayed:0 ""
+PB_Culture_Sindhi_tt_delayed:0 ""
+PB_Culture_Tibeto_Burman_tt_delayed:0 ""
+PB_Culture_Pashtun_tt_delayed:0 ""
+PB_Culture_Balochi_tt_delayed:0 ""
+PB_Culture_Afghan_tt_delayed:0 ""
