--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -1,11 +1,24 @@
 ﻿l_english:
 
+## -------- Culture Conversion Ideas -------- ##
+
+PB_CULTURE_ACCEPT_NINE_TT:0 "Culture Accept Rate: §Y+9%.§!"
+PB_CULTURE_ACCEPT_SIX_TT:0 "Culture Accept Rate: §Y+6%.§!"
+PB_CULTURE_ACCEPT_THREE_TT:0 "Culture Accept Rate: §Y+3%.§!"
+PB_CULTURE_CONVERT_NINE_TT:0 "Culture Convert Rate: §Y+9%.§!"
+PB_CULTURE_CONVERT_SIX_TT:0 "Culture Convert Rate: §Y+6%.§!"
+PB_CULTURE_CONVERT_THREE_TT:0 "Culture Convert Rate: §Y+3%.§!"
+PB_CULTURE_CANT_CONVERT_TT:0 "Culture Conversion §RDisabled§!"
+PB_CULTURE_CANT_ACCEPT_TT:0 "Culture Acceptance §RDisabled§!"
+
 ## -------- Culture Conversion Tooltips -------- ##
 
 PB_Culture_Bar_Blank_tt:0 "Culture Conversion/Acceptance Progress: §Y[?PB_Culture_Conversion_variable]%§!"
 PB_Culture_Bar_Blank_tt_delayed:0 "To begin the process of culture conversion/acceptance please choose one of the buttons below."
 PB_Culture_Accept_tt:0 "Accept this Culture into §Y[ROOT.GetAdjective]§! society"
 PB_Culture_Convert_tt:0 "Convert this culture to the §Y[ROOT.GetAdjective]§! primary culture"
+PB_Culture_Accept_tt_blocked:0 "Requirements:\n  -One free §YCivilian Factory§!\n  -100 §YPolitical Power§!\n  -50,000 §YManpower§!"
+PB_Culture_Convert_tt_blocked:0 "Requirements:\n  -One free §YCivilian Factory§!\n  -100 §YPolitical Power§!\n  -50,000 §YManpower§!"
 
 
 ## -------- Culture Map Mode -------- ##
