--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -13,12 +13,13 @@ PB_CULTURE_CANT_ACCEPT_TT:0 "Culture Acceptance §RDisabled§!"
 
 ## -------- Culture Conversion Tooltips -------- ##
 
-PB_Culture_Bar_Blank_tt:0 "Culture Conversion/Acceptance Progress: §Y[?PB_Culture_Conversion_variable]%§!"
+PB_Culture_Bar_Blank_tt:0 "Culture Conversion/Acceptance Progress: §Y[?PB_convert_progress]%§!"
 PB_Culture_Bar_Blank_tt_delayed:0 "To begin the process of culture conversion/acceptance please choose one of the buttons below."
 PB_Culture_Accept_tt:0 "Accept this Culture into §Y[ROOT.GetAdjective]§! society"
 PB_Culture_Convert_tt:0 "Convert this culture to the §Y[ROOT.GetAdjective]§! primary culture"
-PB_Culture_Accept_tt_blocked:0 "Requirements:\n  -One free §YCivilian Factory§!\n  -100 §YPolitical Power§!\n  -50,000 §YManpower§!"
-PB_Culture_Convert_tt_blocked:0 "Requirements:\n  -One free §YCivilian Factory§!\n  -100 §YPolitical Power§!\n  -50,000 §YManpower§!"
+PB_Culture_Accept_tt_delayed:0 "Requirements:\n  - One free §YCivilian Factory§!\n  - 100 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nAccepting a culture will make every state of that respective culture to be considered a accepted culture of your nations culture group, this will §Gremove the foreign state culture debuff on all states with this culture§! but will not result in the state being cored.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic."
+PB_Culture_Convert_tt_delayed:0 "Requirements:\n  - One free §YCivilian Factory§!\n  - 100 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nConverting a state culture will change the respective state's culture to the primary culture of your nation, after the conversion process is complete §Gthe state will be cored§! and the foreign culture state debuff will be removed.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic."
+
 
 
 ## -------- Culture Map Mode -------- ##
