--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -890,3 +890,4 @@
  VICTORY_POINTS_3933:0 "Pamplona"
  VICTORY_POINTS_6966:0 "Tortosa"
  VICTORY_POINTS_11767:0 "Vlorë"
+ VICTORY_POINTS_11312:0 "Marijampolė"
