Peace deal stuff

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1925,6 +1925,33 @@
   MGE_cn_ADJ:0 "German"
   MGE_an_ADJ:0 "German"
 
+  MGE_Armand_ni:0 "National Worker's State of Germany"
+  MGE_Armand_ni_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_ds:0 "National Worker's State of Germany"
+  MGE_Armand_ds_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_rc:0 "National Worker's State of Germany"
+  MGE_Armand_rc_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_an:0 "National Worker's State of Germany"
+  MGE_Armand_an_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_cn:0 "National Worker's State of Germany"
+  MGE_Armand_cn_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_lb:0 "National Worker's State of Germany"
+  MGE_Armand_lb_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_ss:0 "National Worker's State of Germany"
+  MGE_Armand_ss_DEF:0 "National Worker's State of Germany"
+  MGE_Armand_jc:0 "National Worker's State of Germany"
+  MGE_Armand_jc_DEF:0 "National Worker's State of Germany"
+  MGE_ni_ADJ:0 "German"
+  MGE_rc_ADJ:0 "German"
+  MGE_lb_ADJ:0 "German"
+  MGE_ss_ADJ:0 "German"
+  MGE_jc_ADJ:0 "German"
+  MGE_ds_ADJ:0 "German"
+  MGE_cn_ADJ:0 "German"
+  MGE_an_ADJ:0 "German"
+
+
+
   MGE_ds_party_long:0 "Französische Militärverwawltung"
   MGE_ds_party:0 "FM"
   MGE_ni_party_long:0 "Nationale Kollektive Deutsche Partei"
@@ -1936,7 +1963,6 @@
   PB_MGE_German_Forces_desc:0 "In an effort to help the French War Effort, the German Republic in Nuremberg has formed a formal republican army. The conscription of all Germans, while effectively enlarging our armed forces, has made the war extremely unpopular in almost every corner of the republic."
   PB_MGE_Peace_1:0 "Peace of Nürnberg"
   PB_MGE_Peace_1_desc:0 "With the final negotiations set, the peace is finalized. Germany shall be completely unable to field a proper army untill the treaty is out of effect and Germany will pay France 20% of its economy to repay for the damage done to the French people during the First and Second Great War."
-
 
   MGE_peace_of_nuremberg:0 "Peace of Nürnberg"
   MGE_the_military:0 "Armed Forces against Victorianism"
