--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1975,6 +1975,31 @@
   OBR_Jean_cn_ADJ:0 "English"
   OBR_Jean_an_ADJ:0 "English"
 
+  OBR_MIL_ni:0 "England"
+  OBR_MIL_ni_DEF:0 "England"
+  OBR_MIL_ds:0 "England"
+  OBR_MIL_ds_DEF:0 "England"
+  OBR_MIL_rc:0 "England"
+  OBR_MIL_rc_DEF:0 "England"
+  OBR_MIL_an:0 "England"
+  OBR_MIL_an_DEF:0 "England"
+  OBR_MIL_cn:0 "England"
+  OBR_MIL_cn_DEF:0 "England"
+  OBR_MIL_lb:0 "England"
+  OBR_MIL_lb_DEF:0 "England"
+  OBR_MIL_ss:0 "England"
+  OBR_MIL_ss_DEF:0 "England"
+  OBR_MIL_jc:0 "England"
+  OBR_MIL_jc_DEF:0 "England"
+  OBR_MIL_ni_ADJ:0 "English"
+  OBR_MIL_rc_ADJ:0 "English"
+  OBR_MIL_lb_ADJ:0 "English"
+  OBR_MIL_ss_ADJ:0 "English"
+  OBR_MIL_jc_ADJ:0 "English"
+  OBR_MIL_ds_ADJ:0 "English"
+  OBR_MIL_cn_ADJ:0 "English"
+  OBR_MIL_an_ADJ:0 "English"
+
   ##########################
   # FRENCH COLLABORATION IN GERMANY
   ##########################
