--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -277,8 +277,10 @@
   PB_GER_Europe_After_War_desc:0 "Nothing in Europe will ever be the same again. But this irks the question. What even is Europe?\nHas this continent not been the place of the world where there is never peace?\nWhere bloodshed is common?\nWhere we ignore our faults and blame others?\nMaybe thats a part of who we are.\nOr should we try to change things so this will never happen again?"
   PB_GER_Germanize_East:0 "The Eastern Migration"
   PB_GER_Germanize_East_desc:0 "With the collapse of the Russian Realm in the East one of our the greatest ideals of the Germanic People will finally become reality.\nThe Migration and Settling of the Lands in the East\nIn the last decades the Russians stopped any kind of German Migration and furthermore expelled several thousands of poor German Families from Poland the Baltics. Now the tides have changed. The Jobless will find oppurtunities in the East, the Veterans will gain their deserved lands, the people will have their freedom."
-  PB_GER_Securing_Mountain_Flank:0 "Securing Switzerland"
-  PB_GER_Securing_Mountain_Flank_desc:0 ""
+  #PB_GER_Securing_Mountain_Flank:0 "Securing Switzerland"
+  #PB_GER_Securing_Mountain_Flank_desc:0 ""
+  PB_GER_Integrating_Prussia:0 "Integration of Prussia"
+  PB_GER_Integrating_Prussia_desc:0 "Integration of Prussia"
   PB_GER_Demilitarization:0 "Demilitarization"
   PB_GER_Demilitarization_desc:0 "With the war now over the Reichstag sees no reason for the German nation to have a large military force exceeding its already tight budget. The time has now come to strip this men of their rifles and send them packing back home."
   PB_GER_The_German_Century:0 "The German Century"
@@ -1797,6 +1799,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_TRV_COUP_SUCCESS:0 "The coup in Travancore will succeed"
 
   GER_War_Hungary:0 "Has declared war on Hungary"
+
+  GER_Culture_Accept_East_Prussian:0 "§YEast-Prussian§! becomes an §Gaccepted culture§! of the United Kingdoms of Germany"
 
   ##########################
   # COSMETIC TAGS
