--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -1,5 +1,18 @@
 ﻿l_english:
 
+## -------- Hidden Ideas -------- ##
+
+PB_Culture_Civ_Cost:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost2:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost3:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost4:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost5:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost6:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost7:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost8:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost9:0 "Converting/Accepting a Culture"
+PB_Culture_Civ_Cost10:0 "Converting/Accepting a Culture"
+
 ## -------- Map Mode -------- ##
 
 culture_map_mode_tooltip:0 "The majority culture of this state is §Y[From.get_PB_Culture_Loc]§!"
@@ -22,12 +35,12 @@ PB_Culture_Bar_Blank_tt:0 "Culture Conversion/Acceptance Progress: §Y[?PB_conve
 PB_Culture_Bar_Blank_tt_delayed:0 "To begin the process of culture conversion/acceptance please choose one of the buttons below."
 PB_Culture_Accept_tt:0 "Accept this Culture into §Y[ROOT.GetAdjective]§! society"
 PB_Culture_Convert_tt:0 "Convert this culture to the §Y[ROOT.GetAdjective]§! primary culture"
-PB_Culture_Accept_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 100 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nAccepting a culture will make every state of that respective culture to be considered a accepted culture of your nations culture group, this will §Gremove the foreign state culture debuff on all states with this culture§! but will not result in the state being cored.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic."
-PB_Culture_Convert_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 100 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nConverting a state culture will change the respective state's culture to the primary culture of your nation, after the conversion process is complete §Gthe state will be cored§! and the foreign culture state debuff will be removed.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic."
+PB_Culture_Accept_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 150 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nAccepting a culture will make every state of that respective culture to be considered a accepted culture of your nations culture group, this will §Gremove the foreign state culture debuff on all states with this culture§! but will not result in the state being cored.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic.\n\nYou can only convert/accept §P10§! cultures at one given time."
+PB_Culture_Convert_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 150 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nConverting a state culture will change the respective state's culture to the primary culture of your nation, after the conversion process is complete §Gthe state will be cored§! and the foreign culture state debuff will be removed.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic.\n\nYou can only convert/accept §P10§! cultures at one given time."
 PB_Culture_Accept_Blocked_tt:0 "You do not meet the costs needed to perform this action"
-PB_Culture_Accept_Blocked_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 100 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nAccepting a culture will make every state of that respective culture to be considered a accepted culture of your nations culture group, this will §Gremove the foreign state culture debuff on all states with this culture§! but will not result in the state being cored.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic."
+PB_Culture_Accept_Blocked_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 150 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nAccepting a culture will make every state of that respective culture to be considered a accepted culture of your nations culture group, this will §Gremove the foreign state culture debuff on all states with this culture§! but will not result in the state being cored.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic.\n\nYou can only convert/accept §P10§! cultures at one given time."
 PB_Culture_Convert_Blocked_tt:0 "You do not meet the costs needed to perform this action"
-PB_Culture_Convert_Blocked_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 100 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nConverting a state culture will change the respective state's culture to the primary culture of your nation, after the conversion process is complete §Gthe state will be cored§! and the foreign culture state debuff will be removed.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic."
+PB_Culture_Convert_Blocked_tt_delayed:0 "Cost:\n  - One free §YCivilian Factory§!\n  - 150 §YPolitical Power§!\n  - 50000 §YManpower§!\n\nConverting a state culture will change the respective state's culture to the primary culture of your nation, after the conversion process is complete §Gthe state will be cored§! and the foreign culture state debuff will be removed.\n\nCheck your §YMinority Rights§! political idea to see what buffs/debuffs you have for this mechanic.\n\nYou can only convert/accept §P10§! cultures at one given time."
 PB_Foreign_Culture_tt:0 "This culture is considered §YForeign§!"
 PB_Foreign_Culture_tt_delayed:0 "Because of this the following debuffs have been applied to this state:\n  §R-25%§! Manpower\n  §R+25%§! Local Intel to Enemies\n  §R-25%§! Local Resources\n  §R+25%§! Resistance Growth\n\n§YConvert§! or §YAccept§! this culture to remove these debuffs."
 PB_Culture_Change_tt:0 "This culture is in the process of conversion/acceptance"
@@ -390,7 +403,7 @@ PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Cult
 PB_Culture_Expanded_Lore_tt_delayed:0 "[get_PB_Culture_Loc_Delayed]"
 
 PB_Culture_Main_tt:0 "§GAccepted Cultures§!"
-PB_Culture_Main_tt_delayed:0 "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state gui, there may also be instances where focus, decision, or event effects will change the culture of a state.\n\nStates that have an accepted culture in them cannot be converted. The convert/acceptance process is also irreversible so do so wisely.\n\nCheck your §YMinority Rights§! political policy to see what your §gMonthly§! conversion/acceptance rate is."
+PB_Culture_Main_tt_delayed:0 "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state gui, there may also be instances where focus, decision, or event effects will change the culture of a state.\n\nStates that have an accepted culture in them cannot be converted. The convert/acceptance process is also irreversible so do so wisely.\n\nCheck your §YMinority Rights§! political policy to see what your §gMonthly§! conversion/acceptance rate is.\n\nYou can only convert/accept §P10§! cultures at one given time."
 
 PB_Culture_Pol_tt:0 "[PB_Main_or_Accepted]"
 PB_Culture_Main_Culture_tt:0 "§Y[PB_Accepted_Cultures]§! is [ROOT.GetNameDef]'s §Cmain culture§!"
