Pls someone stop Denikin PLEASE

--- a/localisation/english/PB_RussianAutonomies_l_english.yml
+++ b/localisation/english/PB_RussianAutonomies_l_english.yml
@@ -4,6 +4,8 @@
   # IDEAS
   ##########################
 
+  baltic_brothers_state_war:0 "Forest Brother Activity"
+
   ##########################
   # PARTIES
   ##########################
