--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -891,3 +891,5 @@
  VICTORY_POINTS_6966:0 "Tortosa"
  VICTORY_POINTS_11767:0 "Vlorë"
  VICTORY_POINTS_11312:0 "Marijampolė"
+ VICTORY_POINTS_222:0 "Rezekne"
+ VICTORY_POINTS_185:0 "Kuressaare"
