--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -280,7 +280,7 @@
   #PB_GER_Securing_Mountain_Flank:0 "Securing Switzerland"
   #PB_GER_Securing_Mountain_Flank_desc:0 ""
   PB_GER_Integrating_Prussia:0 "Integration of Prussia"
-  PB_GER_Integrating_Prussia_desc:0 "Integration of Prussia"
+  PB_GER_Integrating_Prussia_desc:0 "We have to bury our century old animosity with the Prussians once and for all. This rivalry started with power fights over the fate of Germany and has long lost its meaning. In truth, nowadays we the Austrians have far more in common with them then other parts of Germany. We both believe firmly in the value of absolute order and stability. We both hate the Jacobins, the parasites who plague our society. Working together we can fullfill a common goal all German people desire. Drive back the inferior Russians and Baltics and gain needed fertile lands in the East."
   PB_GER_Demilitarization:0 "Demilitarization"
   PB_GER_Demilitarization_desc:0 "With the war now over the Reichstag sees no reason for the German nation to have a large military force exceeding its already tight budget. The time has now come to strip this men of their rifles and send them packing back home."
   PB_GER_The_German_Century:0 "The German Century"
@@ -1800,7 +1800,11 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
 
   GER_War_Hungary:0 "Has declared war on Hungary"
 
-  GER_Culture_Accept_East_Prussian:0 "§YEast-Prussian§! becomes an §Gaccepted culture§! of the United Kingdoms of Germany"
+  GER_Culture_Accept_East_Prussian:0 "§YEast-Prussian§! becomes an §Gaccepted culture§! of the German Reich"
+
+  GER_Culture_Accept_Baltic-German:0 "§YBaltic-German§! becomes an §Gaccepted culture§! of the German Reich"
+
+  Baltic_German_Created_tt:0 "§YBaltic-German§! becomes the predominant culture in §GMemel§! and §GSudauen§!"
 
   ##########################
   # COSMETIC TAGS
