--- a/localisation/english/PB_bookmarks_l_english.yml
+++ b/localisation/english/PB_bookmarks_l_english.yml
@@ -14,3 +14,8 @@
  FRA_PAX_BRITANNICA_DESC:0 "Rising from the ashes of their catastrophic defeat in the Great War, France is a nation reborn. The failures of the Bourbon dynasty have paved the way for the rise of ultranationalist fervor. Germany and Britain have suffered weakness and failure, while the peoples of France waited, regaining their strength. Under the guiding hand of Grand Marshall Doriot, France is once again able to stand up to the perfidious Germans and reclaim her rightful place as Europe's dominant power."
  GER_PAX_BRITANNICA_DESC:0 "The United Kingdoms of Germany are in the center of Europe and so influenced by all. With victory in the Great War Germany finally became the second strongest colonial power and had a chance to create great impacts on history such as Britian and Russia. However after the war, failures, mistakes and missed opportunities cost the United Kingdoms great deals of influence and power. Germany is the center point of Europe, enrishing itself in all the different traditions and trends around the world, experiencing another political lockdown and suffering another economic crises. Germany needs to change to have chance of returning to stability ... No ... to survive the impending hell."
  RUS_PAX_BRITANNICA_DESC:0 "Coming Soon" 
+
+ AME_PAX_BRITANNICA_DESC:0 "Coming Soon"
+ SCA_PAX_BRITANNICA_DESC:0 "Coming Soon"
+ MEX_PAX_BRITANNICA_DESC:0 "Coming Soon"
+ QUE_PAX_BRITANNICA_DESC:0 "Coming Soon"
