peace deal work

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -2001,6 +2001,35 @@
   OBR_MIL_an_ADJ:0 "English"
 
   ##########################
+  # FRENCH COLLABORATION IN SCOTLAND
+  ##########################
+
+  SCO_Armand_ni:0 "Revolutionary Scottish Republic"
+  SCO_Armand_ni_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_ds:0 "Revolutionary Scottish Republic"
+  SCO_Armand_ds_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_rc:0 "Revolutionary Scottish Republic"
+  SCO_Armand_rc_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_an:0 "Revolutionary Scottish Republic"
+  SCO_Armand_an_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_cn:0 "Revolutionary Scottish Republic"
+  SCO_Armand_cn_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_lb:0 "Revolutionary Scottish Republic"
+  SCO_Armand_lb_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_ss:0 "Revolutionary Scottish Republic"
+  SCO_Armand_ss_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_jc:0 "Revolutionary Scottish Republic"
+  SCO_Armand_jc_DEF:0 "Revolutionary Scottish Republic"
+  SCO_Armand_ni_ADJ:0 "Scottish"
+  SCO_Armand_rc_ADJ:0 "Scottish"
+  SCO_Armand_lb_ADJ:0 "Scottish"
+  SCO_Armand_ss_ADJ:0 "Scottish"
+  SCO_Armand_jc_ADJ:0 "Scottish"
+  SCO_Armand_ds_ADJ:0 "Scottish"
+  SCO_Armand_cn_ADJ:0 "Scottish"
+  SCO_Armand_an_ADJ:0 "Scottish"
+
+  ##########################
   # FRENCH COLLABORATION IN GERMANY
   ##########################
 
