Revert "Fixed Quebec states!!!"
This reverts commit c033f6d546f586c92b6a3ff57add5859ce383b1e.

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -274,7 +274,7 @@
  STATE_273:0 "Fezzan"
  STATE_274:0 "Nicaraguan Canal"
  STATE_275:0 "Transvaal"
- STATE_276:0 "Huron"
+ STATE_276:0 "Southern Ontario"
  STATE_277:0 "Mexico City"
  STATE_278:0 "Pampas"
  STATE_279:0 "Santiago"
@@ -318,7 +318,7 @@
  STATE_317:0 "Nicaragua"
  STATE_318:0 "Haiti"
  STATE_319:0 "Dominican Republic"
- STATE_320:0 "Upper Canada"
+ STATE_320:0 "Urajio Naval Base"
  STATE_321:0 "Tal Kheer"
  STATE_322:0 "Tibet"
  STATE_323:0 "Nepal"
@@ -814,8 +814,8 @@
  STATE_813:0 "Massachussetts"
  STATE_814:0 "Connecticut"
  STATE_815:0 "New Hampshire"
- STATE_816:0 "Quebec"
- STATE_817:0 "Superieur"
+ STATE_816:0 "Montreal"
+ STATE_817:0 "Marquette"
  STATE_818:0 "Ninevah"
  STATE_819:0 "Antakya"
  STATE_820:0 "Baghdad"
