--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -934,6 +934,12 @@
   French_postwar.7.b:0 "Place it under direct rule"
   French_postwar.7.c:0 "The sitaution will solve itself in time"
 
+  French_postwar.8.t:0 "The Cornwall Garrison"
+  French_postwar.8.d:0 ""
+  French_postwar.8.a:0 "De Gaulle earned it"
+  French_postwar.8.b:0 "France conquers all"
+  French_postwar.8.c:0 "The English can handle it"
+
   ##########################
   # IDEAS
   ##########################
@@ -1645,6 +1651,8 @@
   PB_FRA_The_Royal_Navy_desc:0 "Much of the British Royal Fleet remains mothballed in the ports of Scapa Flow and Dover, although a good chunk did flee across the remaining Empire. The Question now is what to do with these remaining ships?"
   PB_FRA_The_Status_Of_London:0 "The Future of London"
   PB_FRA_The_Status_Of_London_desc:0 "London, the capital of the British Empire now lays under our control. The city in certain aspects has become a nightmare to occupy because of its Megacity architecture and some are calling for a specialized administration to run the city."
+  PB_FRA_Cornwall_Garrison:0 "The Cornwall Garrison"
+  PB_FRA_Cornwall_Garrison_desc:0 "Cornwall currently resides as a heavily garrisoned state under our English puppet however French officials have called for full occupation instead of leaving the responsibility to our England. Alternatively, we could grant Hero of the French army Charles de Gaulle total unrestricted control over the region."
 
   PB_FRA_Fund_The_Steelworks_Cat:0 "Heavy Industry Planning"
   PB_FRA_Fund_The_Steelworks_Cat_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
